feat (repayment): all in one
